# kipack

./: .devcontainer.json  .gitattributes  .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  Dockerfile.online  dev-requirements.txt  devcontainer.json  environment.yml  requirements-dev.txt  requirements.txt
.devcontainer/library-scripts/: python-debian.sh
docker/: Dockerfile
examples/: run_test.py
examples/boltzmann/: euler_1d.py  euler_2d.py  penalization_0d.py  penalization_1d.py  rbm_0d.py  rbm_1d.py
examples/boltzmann/configs/: fsm.json  penalty.json  rbm.json
examples/linear_boltz/: rbm_1d.py
examples/linear_boltz/configs/: config.py  linear.json  linear.py
examples/linear_transport/: rbm_0d.py  rbm_1d.py  rbm_1d_ap.py  rbm_2d.py  rbm_2d_ap.py
examples/linear_transport/configs/: linear.json  linear.py  linear_2d.json  parity.json  parity_2d.json
examples/notebooks/boltzmann/: config.py  config_2d.py  config_3d.py  fsm-2d.ipynb  fsm-3d.ipynb  homo-penalty-test.ipynb  inhomo-penalty-test.ipynb  rbm-homo-test.ipynb  rbm-inhomo-test.ipynb
examples/notebooks/linear_boltz/: rbm_1d.ipynb
examples/notebooks/linear_transport/: rbm_0d.ipynb  rbm_1d.ipynb  rbm_2d.ipynb
src/collision/: __init__.py  base.py  inelastic.py  vmesh.py
src/configs/: config.json  config_0d_2d.json  config_1d_2d.json  config_1d_3d.json  config_2d_2d.json  config_3D.json  vhs-2d.ini  vhs-3d.ini  vhs_2d.json
src/kipack/: utils.py
src/kipack/collision/: __init__.py  base.py  base_config.py  inelastic.py  linear.py  linear_boltz.py  rbm.py  rbm_linear.py  rbm_particle.py  rbm_v1.py  rbm_v2.py  utils.py  vmesh.py  vmesh_old.py
src/kipack/params/: __init__.py  base_config.py  params_dict.py
src/kipack/pykinetic/: __init__.py  (+7 more)
src/pykinetic/: __init__.py  cfl.py  controller.py  geometry.py  solution.py  solver.py  state.py  utils.py
src/tests/: penalization_0d.py  penalization_1d.py  rbm.py
tests/: euler_1d.py  penalization_0d.py  penalization_1d.py  rbm_0d.py  rbm_1d.py  rbm_1d_linear.py  utils.py
tests/boltzmann/: penalization_0d.py  rbm_0d.py
tests/linear_transport/: ap_rbm.py  rbm_0d_linear.py  rbm_1d.py
(+33 files in other folders)
