[metadata]
name = kipack
version = 0.9.0
description = A python-based solver for kinetic equations
long_description = file: README.md
keywords = kinetic equaitons, fast solver, cuda
author = Zheng Ma
author_email = mazhengcn@outlook.com
license = Apache License, Version 2.0
url = https://github.com/mazhengcn/kipack
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
include_package_data = True
package_dir = 
    =src
packages = find:
install_requires = 
    absl-py
    ml-collections
    numpy
    scipy
    pyfftw
    cupy-cuda115

[options.package_data]
* = *.txt

[options.packages.find]
where = src
